<resources>
    <string name="app_name">A2</string>
    <string name="action_settings">Settings</string>
    <!--string constants used by the application-->
    <string name="EMPTY_BANNER_ID">Empty Banner ID</string>
    <string name="INVALID_BANNER_ID">Invalid Banner ID</string>
    <string name="INVALID_EMAIL_ADDRESS">Invalid email address</string>
    <string name="INVALID_DAL_EMAIL">Invalid DAL email address</string>
    <string name="EMPTY_STRING"></string>
    <string name="INVALID_ROLE">Invalid user role</string>
    <string name="FIREBASE_DB_URL">https://csci3130-fall2024-a2-default-rtdb.firebaseio.com</string>

</resources>